# mlua-check

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  justfile
examples/: basic_lint.rs  luacats.rs  with_vm.rs
src/: config.rs  diagnostic_bridge.rs  emmyrc_bridge.rs  engine.rs  globals_bridge.rs  lib.rs  scope.rs  symbols.rs  types.rs  vm.rs  walker.rs
src/rules/: mod.rs  undefined_global.rs
tests/: integration.rs
