[package]
name = "mlua-check"
version = "0.2.0"
edition = "2021"
rust-version = "1.77"
description = "Lua checker on mlua — undefined variable/global/field detection with LuaCats support"
authors = ["Yutaka Nishimura"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ynishi/mlua-check"
keywords = ["lua", "check", "mlua", "static-analysis", "luacats"]
categories = ["development-tools"]

[dependencies]
emmylua_parser = "0.24"
mlua = { version = "0.11", features = ["lua54", "vendored", "send"] }
rowan = "0.16"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
