[package]
name = "mlua-check"
version = "0.2.0"
edition = "2021"
rust-version = "1.77"
description = "Lua checker on mlua — undefined variable/global/field detection with LuaCats support"
authors = ["Yutaka Nishimura"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ynishi/mlua-check"
keywords = ["lua", "check", "mlua", "static-analysis", "luacats"]
categories = ["development-tools"]

[dependencies]
emmylua_code_analysis = "0.23"
emmylua_parser = "0.26"
lsp_types = { version = "0.1.0", package = "emmy_lsp_types" }
mlua = { version = "0.11", features = ["lua54", "vendored", "send"] }
# rowan kept as direct dep until walker.rs is deleted in ST3
rowan = "0.16"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tokio-util = { version = "0.7" }

[dev-dependencies]
serde_json = "1"
